--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+"Lowawa-Finances-Connection":"Server=.\\SQLEXPRESS2023;Database=db-lowawa-finances;trusted_Connection=true;TrustServerCertificate=true"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
