Implementing the JWT Token

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,10 @@
 {
   "ConnectionStrings": {
 "Lowawa-Finances-Connection":"Server=.\\SQLEXPRESS2023;Database=db-lowawa-finances;trusted_Connection=true;TrustServerCertificate=true"
-
   },
+  "AppSettings":{
+    "Token":"1234567891234567891234567890"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
